feat(lint) install es-lint
```
yarn run ng add @angular-eslint/schematics
yarn run ng g @angular-eslint/schematics:convert-tslint-to-eslint --remove-tslint-if-no-more-tslint-targets --ignore-existing-tslint-config
```

--- a/angular.json
+++ b/angular.json
@@ -103,9 +103,21 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/debug-app/**/*.ts",
+              "projects/debug-app/**/*.html"
+            ]
+          }
         }
       }
     }
   },
-  "defaultProject": "debug-app"
+  "defaultProject": "debug-app",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
