--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^12.0.0-next.8",
     "prettier": "^2.2.1",
     "typescript": "~4.2.3"
   },
