feat(debug): use UiModule from DebugApp

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,15 +16,9 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "lib": ["es2018", "dom"],
     "paths": {
-      "ui": [
-        "dist/ui/ui",
-        "dist/ui"
-      ]
+      "@sandbox/ui": ["dist/ui/ui", "dist/ui"]
     }
   },
   "angularCompilerOptions": {
