--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "@sandbox/ui",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^12.0.0-rc.2",
