--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dist-ui
+          path: dist/ui
 
       - name: Restore node_modules
         id: node_modules_cache_id
@@ -137,6 +138,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dist-ui
+          path: dist/ui
 
       - name: Build
         run: yarn build
