feat(storybook) install missing deps
```
yarn add -D @webcomponents/custom-elements @angular/elements
```

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular-eslint/template-parser": "4.2.0",
     "@angular/cli": "~12.0.0-rc.2",
     "@angular/compiler-cli": "~12.0.0-rc.2",
+    "@angular/elements": "^11.2.13",
     "@babel/core": "^7.14.0",
     "@compodoc/compodoc": "^1.1.11",
     "@storybook/addon-actions": "^6.2.9",
@@ -48,6 +49,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "@webcomponents/custom-elements": "^1.4.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^8.3.0",
