feat(storybook): angular12 uses webpack5

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,15 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Created by https://www.toptal.com/developers/gitignore/api/compodoc
+# Edit at https://www.toptal.com/developers/gitignore?templates=compodoc
+
+### Compodoc ###
+# gitignore template for the Compodoc, UI guide for front apps
+# website: https://compodoc.app/
+
+documentation/
+documentation.json
+
+# End of https://www.toptal.com/developers/gitignore/api/compodoc
