feat(storybook): add 1st story for UiComponent

--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -1,20 +1,9 @@
 {
-  "extends": "../projects/debug-app/tsconfig.app.json",
+  "extends": "../projects/ui/tsconfig.lib.json",
   "compilerOptions": {
-    "types": [
-      "node"
-    ]
+    "types": ["node"]
   },
-  "exclude": [
-    "../src/test.ts",
-    "../src/**/*.spec.ts",
-    "../projects/**/*.spec.ts"
-  ],
-  "include": [
-    "../src/**/*",
-    "../projects/**/*"
-  ],
-  "files": [
-    "./typings.d.ts"
-  ]
+  "exclude": ["../projects/**/*.spec.ts"],
+  "include": ["../projects/**/*"],
+  "files": ["./typings.d.ts"]
 }
