fix(storybook) fix an error 'TypeError: Cannot read property 'find' of undefined'

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "ng test",
     "postinstall": "husky install",
     "poststart": "wait-on http://localhost:4200 && opener http://localhost:4200",
-    "storybook:docs": "compodoc -p ./projects/ui/tsconfig.lib.json -e json -d .",
+    "storybook:docs": "compodoc -p ./projects/ui/tsconfig.lib.storybook.json -e json -d .",
     "storybook:build": "yarn storybook:docs && build-storybook",
     "storybook": "yarn storybook:docs && start-storybook -p 6006"
   },
