--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,3 +142,34 @@ jobs:
 
       - name: Build
         run: yarn build
+
+  build-storybook:
+    needs: [lint, build-libs]
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [14.x]
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Restore node_modules
+        id: node_modules_cache_id
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ matrix.os }}-node-v${{ matrix.node-version }}-deps-${{ hashFiles(format('{0}{1}', github.workspace, '**/yarn.lock')) }}
+
+      - name: load dist/ui
+        uses: actions/download-artifact@v2
+        with:
+          name: dist-ui
+          path: dist/ui
+
+      - name: Build storybook
+        run: yarn storybook:build
