--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,3 +173,9 @@ jobs:
 
       - name: Build storybook
         run: yarn storybook:build
+
+      - name: upload Storybook
+        uses: actions/upload-artifact@v2
+        with:
+          name: storybook
+          path: dist/storybook
