feat(git): add formatter to git commit message

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:ui": "rimraf dist/ui && yarn build ui",
     "lint": "ng lint",
     "test": "ng test",
+    "commit": "cz",
     "postinstall": "husky install",
     "poststart": "wait-on http://localhost:4200 && opener http://localhost:4200",
     "storybook:docs": "compodoc -p ./projects/ui/tsconfig.lib.storybook.json -e json -d .",
@@ -52,6 +53,7 @@
     "@typescript-eslint/parser": "4.16.1",
     "@webcomponents/custom-elements": "^1.4.3",
     "babel-loader": "^8.2.2",
+    "commitizen": "^4.2.3",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
