feat(ui): add some stories

--- a/angular.json
+++ b/angular.json
@@ -116,7 +116,8 @@
       "projectType": "library",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "changeDetection": "OnPush"
         }
       },
       "root": "projects/ui",
