--- a/package.json
+++ b/package.json
@@ -18,27 +18,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.0-rc.2",
-    "@angular/common": "~12.0.0-rc.2",
-    "@angular/compiler": "~12.0.0-rc.2",
-    "@angular/core": "~12.0.0-rc.2",
-    "@angular/forms": "~12.0.0-rc.2",
-    "@angular/platform-browser": "~12.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "~12.0.0-rc.2",
-    "@angular/router": "~12.0.0-rc.2",
+    "@angular/animations": "~12.0.0",
+    "@angular/common": "~12.0.0",
+    "@angular/compiler": "~12.0.0",
+    "@angular/core": "~12.0.0",
+    "@angular/forms": "~12.0.0",
+    "@angular/platform-browser": "~12.0.0",
+    "@angular/platform-browser-dynamic": "~12.0.0",
+    "@angular/router": "~12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0-rc.2",
+    "@angular-devkit/build-angular": "~12.0.0",
     "@angular-eslint/builder": "4.2.0",
     "@angular-eslint/eslint-plugin": "4.2.0",
     "@angular-eslint/eslint-plugin-template": "4.2.0",
     "@angular-eslint/schematics": "4.2.0",
     "@angular-eslint/template-parser": "4.2.0",
-    "@angular/cli": "~12.0.0-rc.2",
-    "@angular/compiler-cli": "~12.0.0-rc.2",
+    "@angular/cli": "~12.0.0",
+    "@angular/compiler-cli": "~12.0.0",
     "@angular/elements": "^11.2.13",
     "@babel/core": "^7.14.0",
     "@compodoc/compodoc": "^1.1.11",
@@ -64,7 +64,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^12.0.0-next.8",
+    "ng-packagr": "^12.0.0",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.2",
     "prettier": "^2.2.1",
