--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# https://yarnpkg.com/getting-started/qa
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
